--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,22 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    volumes:
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.4.7
+    command: start-dev
+    environment:
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: keycloak
+      KEYCLOAK_ADMIN: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: admin
+    ports:
+      - "8081:8080"
+    depends_on:
+      - postgres
   finance-ledger-app:
     image: finance-ledger-app:1.0.0
     build:
@@ -29,3 +45,5 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      keycloak:
+        condition: service_started
