Configure Spring Security configuration
* Improve Readme file
* Refactor pom

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -8,3 +8,8 @@ spring:
     password: password
   liquibase:
     enabled: false
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          enabled: false
