--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -2,12 +2,15 @@ spring:
   profile:
     active: test
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=POSTGRESQL
-    driverClassName: org.h2.Driver
-    username: sa
-    password: password
+    url: jdbc:postgresql://${DB_HOST:localhost}:5432/${DB_NAME:finance-ledger_db}
+    username: ${DB_USER:finance-ledger}
+    password: ${DB_PASSWORD:finance-ledger}
+    jpa:
+      hibernate:
+        ddl-auto: update
   liquibase:
-    enabled: false
+    enabled: true
+    change-log: classpath:db/changelog/changelog-master.yaml
   security:
     oauth2:
       resourceserver:
