--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,6 +43,7 @@ services:
       KEYCLOAK_HOST: keycloak
       KEYCLOAK_PORT: 8080
       REALM: finance
+      SPRING_PROFILES_ACTIVE: dev
     ports:
       - "8080:8080"
     depends_on:
