--- a/src/main/resources/db/changelog/create/create-accounts-table.yaml
+++ b/src/main/resources/db/changelog/create/create-accounts-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: accounts
+      id: create-accounts
       author: samarcos
       changes:
         - createTable:
