--- a/src/main/resources/db/changelog/create/create-users-table.yaml
+++ b/src/main/resources/db/changelog/create/create-users-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: userauth
+      id: create-users
       author: samarcos
       changes:
         - createTable:
@@ -13,19 +13,24 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: provider_id
+                  name: auth_provider_id
                   type: varchar(255)
                   constraints:
                     nullable: false
                     unique: true
               - column:
-                  name: email
-                  type: varchar(255)
+                  name: tenant_id
+                  type: uuid
                   constraints:
                     nullable: false
               - column:
                   name: name
                   type: varchar(255)
+              - column:
+                  name: email
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
               - column:
                   name: created_at
                   type: timestamp with time zone
