--- a/src/main/resources/db/changelog/create/create-categories-table.yaml
+++ b/src/main/resources/db/changelog/create/create-categories-table.yaml
@@ -8,21 +8,45 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: UUID
+                  type: uuid
                   constraints:
                     primaryKey: true
                     nullable: false
               - column:
+                  name: tenant_id
+                  type: uuid
+                  constraints:
+                    nullable: false
+              - column:
                   name: name
-                  type: VARCHAR(100)
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
                   name: parent_id
-                  type: UUID
+                  type: uuid
+                  constraints:
+                    nullable: true
         - addForeignKeyConstraint:
             baseTableName: categories
             baseColumnNames: parent_id
             referencedTableName: categories
             referencedColumnNames: id
-            constraintName: fk_categories_parent
+            constraintName: fk_category_parent
+            onDelete: SET NULL
+        - addUniqueConstraint:
+            tableName: categories
+            columnNames: tenant_id, name
+            constraintName: uq_category_tenant_name
+        - createIndex:
+            indexName: idx_category_tenant
+            tableName: categories
+            columns:
+              - column:
+                  name: tenant_id
+        - createIndex:
+            indexName: idx_category_parent
+            tableName: categories
+            columns:
+              - column:
+                  name: parent_id
